# fapt

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Makefile  NOTES.md  README.md  appveyor.yml  apt.capnp  main.cpp  setup.cfg  setup.py
examples/: check_all.rs  list_latest_source.rs  list_latest_source_list.rs  list_latest_source_map.rs  list_latest_source_obj.rs  list_source_packages.rs
examples/ninja/: .gitignore  README.md  build.ninja  with-download.sh
fapt/: Cargo.toml
fapt-parse/: Cargo.toml  build.rs
fapt-parse/parse/: build.rs
fapt-parse/parse/src/: apt_capnp.rs  bin.rs  fields.rs  ident.rs
fapt-parse/raw/: main.cpp
fapt-parse/src/: apt_capnp.rs  bin.rs  deps.rs  errors.rs  fields.rs  ident.rs  lib.rs  main.rs  rfc822.rs  src.rs  types.rs  vcs.rs
fapt-pkg/: Cargo.toml
fapt-pkg/examples/: list_source_packages.rs
fapt-pkg/src/: checksum.rs  classic_sources_list.rs  commands.rs  dep_graph.rs  errors.rs  fetch.rs  lib.rs  lists.rs  parse.rs  release.rs  rfc822.rs  signing.rs
fapt-pkg/src/parse/: deps.rs  ident.rs  rfc822.rs  src.rs  types.rs  vcs.rs
fapt/src/: errors.rs  main.rs
parse/: Cargo.toml  gen.py
parse/src/: bin.rs  deps.rs  errors.rs  fields.rs  ident.rs  main.rs  src.rs  vcs.rs
raw/: CMakeLists.txt  README.md  main.cpp
src/: checksum.rs  classic_sources_list.rs  commands.rs  dep_graph.rs  fetch.rs  lib.rs  lists.rs  release.rs  rfc822.rs  signing.rs  sources_list.rs  system.rs
src/parse/: arch.rs  bin.rs  deps.rs  ident.rs  mod.rs  pkg.rs  rfc822.rs  src.rs  types.rs  vcs.rs
tests/: objectify.rs  test_fapt.py
