[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "os",
    "parsing",
]
description = "Faux' apt package manager for Debian"
license = "MIT OR Apache-2.0"
name = "fapt"
readme = "README.md"
repository = "https://github.com/FauxFaux/fapt"
version = "0.1.0"

edition = "2021"

exclude = [
    "tests/lists/trusty.list",
]


[badges.appveyor]
branch = "master"
repository = "FauxFaux/fapt"
service = "github"

[badges.travis-ci]
repository = "FauxFaux/fapt"

[features]
binaries = ["clap"]

[dependencies]
anyhow = "1"
deb-version = "0.1"
distro-keyring = "0.1"
chrono = "0.4"
directories = "2"
filetime = "0.2"
gpgrv = "0.3"
hex = "0.4"
insideout = "0.2"
mailparse = "0.10"
md-5 = "0.10"
nom = "4"
sha2 = "0.10"
tempfile = "3"
tempfile-fast = "0.3"

[dependencies.clap]
optional = true
features = ["cargo"]
version = "4"

[dependencies.digest]
features = ["std"]
version = "0.10"

[dependencies.flate2]
default-features = false
features = ["rust_backend"]
version = "1"

[dependencies.reqwest]
features = ["blocking"]
version = "0.10"

[dependencies.jemallocator]
optional = true
version = "0.3"

[[bin]]
name = "fapt"
required-features = ["binaries"]
