[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
categories = [
    "os",
    "parsing",
]
description = "Faux' apt package manager for Debian"
license = "MIT OR Apache-2.0"
name = "fapt"
readme = "README.md"
repository = "https://github.com/FauxFaux/fapt"
version = "0.1.0"

edition = "2021"

exclude = [
    "tests/lists/trusty.list",
]


[badges.appveyor]
branch = "master"
repository = "FauxFaux/fapt"
service = "github"

[badges.travis-ci]
repository = "FauxFaux/fapt"

[features]
binaries = ["clap"]

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", optional = true, features = ["cargo", "derive"] }
deb-version = "0.1"
digest = { version = "0.10", features = ["std"] }
directories = "5"
distro-keyring = "0.2"
filetime = "0.2"
flate2 = "1.0.12"
gpgrv = "0.4"
hex = "0.4"
insideout = "0.2"
jemallocator = { version = "0.5", optional = true }
mailparse = "0.14"
md-5 = "0.10"
nom = "4"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
tempfile = "3"
tempfile-fast = "0.3"

[[bin]]
name = "fapt"
required-features = ["binaries"]
