[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "fapt-pkg"
version = "0.1.0"

[dependencies]
error-chain = "0.11"
filetime = "0.1"
gpgme = "0.6"
hex = "0.3"
mailparse = "0.6"
md-5 = "0.7"
nom = "3"
reqwest = "0.8"
hyper = "0.11.8"
serde_json = "1.0"
sha2 = "0.7"
tempdir = "0.3"
tempfile-fast = "0.1"

[dependencies.digest]
features = ["std"]
version = "0.7"

[dependencies.flate2]
default-features = false
features = ["rust_backend"]
version = "1"

[dev-dependencies.error-chain-for-dumb-ides]
git = "https://github.com/FauxFaux/error-chain-for-dumb-ides"
