[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
description = "Faux' apt package manager for Debian"
license = "MIT"
name = "fapt-pkg"
repository = "https://github.com/FauxFaux/fapt"
version = "0.1.0"

[badges.travis-ci]
repository = "FauxFaux/fapt"

[dependencies]
deb-version = "0.1"
error-chain = "0.11"
filetime = "0.2"
gpgme = "0.7"
hex = "0.3"
md-5 = "0.7"
reqwest = "0.8"
hyper = "0.11.8"
serde_json = "1.0"
sha2 = "0.7"
tempdir = "0.3"
tempfile-fast = "0.2"

[dependencies.digest]
features = ["std"]
version = "0.7"

[dependencies.fapt-parse]
path = "../fapt-parse"

[dependencies.flate2]
default-features = false
features = ["rust_backend"]
version = "1"

[dev-dependencies.error-chain-for-dumb-ides]
version = "0"
